test_suite/tests/ui/fail/invalid_arg_count_in_array/invalid_option_array_min_max.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_array_min_max.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid number of arguments for `values : [u32 ; 3]` expected 3
